--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -230,7 +230,7 @@
       text-decoration:none
     }
 
-    .footer-links a {
+    .footer-link a {
       color:#1d1a14;
       font-family:Arial;
       font-size:16px;
