Removed unnecessary code

--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -65,19 +65,11 @@
   <!--<![endif]-->
   <!--[if mso]>
     <style>
-      .cta-button {
+      .cta-button, .cta-button-secondary {
         background: transparent !important;
         border: none !important;
         padding: 0 !important;
         color: inherit !important;
-      }
-
-      .cta-button-secondary {
-        border: none !important;
-        padding: 0 !important;
-        color: inherit !important;
-        background: transparent !important;
-        mso-color-alt: #555555 !important;
       }
     </style>
   <![endif]-->
