--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -711,6 +711,7 @@
                                                                       <tr>
                                                                         <td class="toc" style="color:#212529;font-family:Arial;font-size:16px;font-weight:400;line-height:24px">
                                                                           <lp-toc lp-bullet-padding-right="16" lp-bullet-padding-left="1" lp-bullet="https://jmacare.github.io/mjml/Laposta/assets/lp-toc.png"></lp-toc>
+                                                                          <br/>
                                                                         </td>
                                                                       </tr>
                                                                       <tr>
@@ -2516,13 +2517,14 @@
                                     <tr>
                                       <td align="center" style="font-size:0;padding:16px 0;word-break:break-word">
                                         <p style="border-top:1px solid #dee2e6;font-size:1px;margin:0 auto;width:100%">
-                                        </p> <!--[if mso | IE
-                                            ]><table align="center" border="0" cellpadding="0" cellspacing="0" style="border-top: solid 1px #dee2e6; font-size: 1px; margin: 0px auto; width: 700px" role="presentation" width="700px">
-                                              <tr>
-                                                <td style="height: 0; line-height: 0">&nbsp;</td>
-                                              </tr>
-                                            </table><!
-                                          [endif]-->
+                                        </p> 
+                                        <!--[if mso | IE]>
+                                        <table align="center" border="0" cellpadding="0" cellspacing="0" style="border-top: solid 1px #dee2e6; font-size: 1px; margin: 0px auto; width: 700px" role="presentation" width="700px">
+                                          <tr>
+                                            <td style="height: 0; line-height: 0">&nbsp;</td>
+                                          </tr>
+                                        </table>
+                                        <![endif]-->
                                       </td>
                                     </tr>
                                   </tbody>
