--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -711,7 +711,9 @@
                                                                       <tr>
                                                                         <td class="toc" style="color:#212529;font-family:Arial;font-size:16px;font-weight:400;line-height:24px">
                                                                           <lp-toc lp-bullet-padding-right="16" lp-bullet-padding-left="1" lp-bullet="https://jmacare.github.io/mjml/Laposta/assets/lp-toc.png"></lp-toc>
+                                                                          <!--[if mso | IE]>
                                                                           <br/>
+                                                                          <![endif]-->
                                                                         </td>
                                                                       </tr>
                                                                       <tr>
