lp-toc 1px line bug fix

--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -204,12 +204,14 @@
       color: inherit
     }
     
-    .lp-toc-link a {
-      color: #1d1a14;
-      text-decoration: none;
-      font-family:Arial, sans-serif;
-      font-size: 16px;
-      font-weight: 400;
+    .lp-toc-link, .lp-toc-link a {
+      color:#1d1a14;
+      font-family:Arial;
+      font-size:16px;
+      font-weight:400;
+      line-height:24px;
+      text-align:left;
+      text-decoration:none
     }
 
     .webversion a {
