--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -391,9 +391,11 @@
                                           <td style="width:134px"> <img class="brand" alt="Logo" src="images/Logo.png"
                                               style="border:0;display:block;font-size:0;height:auto;outline:none;text-decoration:none;width:100%;"
                                               width="134" height="auto" lp-logo> 
+                                              <!--[if !mso]><!-->
                                               <img class="brand-dark" alt="Logo" src="images/Logo_dark.png"
                                               style="border:0;display:block;font-size:0;height:auto;outline:none;text-decoration:none;width:100%;display:none;mso-hide:all;"
                                               width="134" height="auto" lp-logo> 
+                                              <!--<![endif]-->
                                           </td>
                                         </tr>
                                       </tbody>
