removed dark mode logo

--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -273,16 +273,8 @@
 
     @media (prefers-color-scheme: dark) {
       body{
-        background-color: transparent !important;
-      }   
-
-      .brand {
-          display: none !important;
-      }
-
-      .brand-dark {
-          display: table-cell !important;
-      }
+        background-color: #ffffff !important;
+      }        
     }
   </style>
 </head>
@@ -388,14 +380,9 @@
                                       style="border-collapse:collapse;border-spacing:0">
                                       <tbody>
                                         <tr>
-                                          <td style="width:134px"> <img class="brand" alt="Logo" src="images/Logo.png"
-                                              style="border:0;display:block;font-size:0;height:auto;outline:none;text-decoration:none;width:100%;"
+                                          <td style="width:134px"> <img alt src="images/Logo.png"
+                                              style="border:0;border-radius:8px;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100%"
                                               width="134" height="auto" lp-logo> 
-                                              <!--[if !mso]><!-->
-                                              <img class="brand-dark" alt="Logo" src="images/Logo_dark.png"
-                                              style="border:0;display:block;font-size:0;height:auto;outline:none;text-decoration:none;width:100%;display:none;mso-hide:all;"
-                                              width="134" height="auto" lp-logo> 
-                                              <!--<![endif]-->
                                           </td>
                                         </tr>
                                       </tbody>
