--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="und" dir="auto" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml"
+<html lang="nl" dir="auto" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml"
   xmlns:o="urn:schemas-microsoft-com:office:office">
 
 <head>
@@ -280,7 +280,7 @@
 </head>
 
 <body style="background-color:#f1eee9;word-spacing:normal">
-  <div style="background-color:#f1eee9" lang="und" dir="auto"> 
+  <div style="background-color:#f1eee9" lang="nl" dir="auto"> 
     <lp-layout lp-label="Weblink">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
         style="background:#f7f6f4;background-color:#f7f6f4;width:100%">
@@ -2371,10 +2371,18 @@
                                 <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                                   <tbody>
                                     <tr>
-                                      <td align="left" style="font-size:0;padding:0;word-break:break-word">
-                                        <div
-                                          style="color:#1d1a14;font-family:Arial;font-size:20px;font-weight:700;line-height:24px;text-align:left;text-decoration:none">
-                                          <lp-singleline lp-label="Titel"> Contact</lp-singleline></div>
+                                      <td style="font-size:0;padding:0;word-break:break-word">
+                                        <div style="height:16px;line-height:16px">&#8202;</div>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td align="left" valign="middle"><img
+                                                  src="images/I2001_1532_2001_1531.png" alt height="32"
+                                                  style="height:32px;width:auto"></td>
+                                    </tr>
+                                    <tr>
+                                      <td style="font-size:0;padding:0;word-break:break-word">
+                                        <div style="height:8px;line-height:8px">&#8202;</div>
                                       </td>
                                     </tr>
                                   </tbody>
@@ -2578,12 +2586,6 @@
                                               </td>
                                               <td align="left" valign="middle"><img
                                                   src="images/I2001_1532_2001_1530.png" alt height="32"
-                                                  style="height:32px;width:auto"></td>
-                                              <td style="font-size:8px;padding:0;word-break:break-word" width="24">
-                                                <div style="height:8px;line-height:8px">&nbsp;</div>
-                                              </td>
-                                              <td align="left" valign="middle"><img
-                                                  src="images/I2001_1532_2001_1531.png" alt height="32"
                                                   style="height:32px;width:auto"></td>
                                               <td style="font-size:8px;padding:0;word-break:break-word" width="24">
                                                 <div style="height:8px;line-height:8px">&nbsp;</div>
