weblink white space

--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -309,8 +309,7 @@
                                           <td align="left" style="font-size:0;padding:0;word-break:break-word">
                                             <div
                                               style="color:#776e5d;font-family:Arial;font-size:12px;font-weight:400;line-height:16px;text-align:left;text-decoration:none">
-                                              <lp-singleline lp-label="Korte beschrijving"> Een korte beschrijving van
-                                                de nieuwsbrief</lp-singleline> </div>
+                                              <lp-singleline lp-label="Korte beschrijving"> Een korte beschrijving van de nieuwsbrief</lp-singleline> </div>
                                           </td>
                                         </tr>
                                       </tbody>
@@ -332,8 +331,7 @@
                                           <td align="right" style="font-size:0;padding:0;word-break:break-word">
                                             <div
                                               style="color:#776e5d;font-family:Arial;font-size:12px;font-weight:700;line-height:16px;text-align:right;text-decoration:none" class="webversion">
-                                              <lp-singleline lp-label="Webversie"> <lp-webversion> Bekijk de
-                                                  webversie</lp-webversion> </lp-singleline> </div>
+                                              <lp-singleline lp-label="Webversie"> <lp-webversion> Bekijk de webversie</lp-webversion> </lp-singleline> </div>
                                           </td>
                                         </tr>
                                       </tbody>
