--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -2122,6 +2122,52 @@
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
       </lp-layout>
+
+      <lp-layout lp-label="Video">
+        <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+        <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
+          <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
+            style="background:#fff;background-color:#fff;width:100%">
+            <tbody>
+              <tr>
+                <td style="direction:ltr;font-size:0;padding:16px 24px;text-align:center">
+                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:652px;" ><![endif]-->
+                  <div class="mj-column-per-100 mj-outlook-group-fix"
+                    style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:top;width:100%">
+                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                      <tbody>
+                        <tr>
+                          <td style="padding:0;vertical-align:top">
+                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                              <tbody>
+                                <tr>
+                                  <td align="center" class="lp-edit"
+                                    style="font-size:0;padding:0;word-break:break-word">
+                                    <table border="0" cellpadding="0" cellspacing="0" role="presentation"
+                                      style="border-collapse:collapse;border-spacing:0" class="mj-full-width-mobile">
+                                      <tbody>
+                                        <tr>
+                                          <td style="width:652px" class="mj-full-width-mobile">
+                                              <a href="http://www.youtube.com/watch?v=aLwf6s2xwlU"><lp-video lp-width="652" lp-label="Video" lp-src="http://www.youtube.com/watch?v=aLwf6s2xwlU"/>Video</lp-video></a>
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+      </lp-layout>
       
       <lp-layout lp-label="Divider">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
