video lp tag cleanup

--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -2148,7 +2148,7 @@
                                       <tbody>
                                         <tr>
                                           <td style="width:652px" class="mj-full-width-mobile">
-                                              <a href="http://www.youtube.com/watch?v=aLwf6s2xwlU"><lp-video lp-width="652" lp-label="Video" lp-src="http://www.youtube.com/watch?v=aLwf6s2xwlU"/>Video</lp-video></a>
+                                              <lp-video lp-width="652" lp-label="Video" lp-src="http://www.youtube.com/watch?v=aLwf6s2xwlU"/>
                                           </td>
                                         </tr>
                                       </tbody>
