min max width video

--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -2148,7 +2148,7 @@
                                       <tbody>
                                         <tr>
                                           <td style="width:652px" class="mj-full-width-mobile">
-                                              <lp-video lp-width="652" lp-label="Video" lp-src="http://www.youtube.com/watch?v=aLwf6s2xwlU"/>
+                                              <lp-video lp-width="652" lp-label="Video" lp-src="http://www.youtube.com/watch?v=aLwf6s2xwlU" lp-resizable lp-max-width="652" lp-min-width="200"/>
                                           </td>
                                         </tr>
                                       </tbody>
