--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -281,6 +281,7 @@
 
 <body style="background-color:#f1eee9;word-spacing:normal">
   <div style="background-color:#f1eee9" lang="nl" dir="auto"> 
+
     <lp-layout lp-label="Weblink">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
         style="background:#f7f6f4;background-color:#f7f6f4;width:100%">
@@ -431,6 +432,7 @@
         </table>
       </div> <!--[if mso | IE]></td></tr></table><![endif]-->
     </lp-layout>
+
     <lp-repeater>
       <lp-layout lp-label="Hero">
         <table align="center" background="images/header-light.png" border="0" cellpadding="0" cellspacing="0"
@@ -559,8 +561,40 @@
             </tr>
           </tbody>
         </table>
+        <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+        <div style="margin:0 auto;max-width:700px">
+          <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%">
+            <tbody>
+              <tr>
+                <td style="direction:ltr;font-size:0;padding:0;text-align:center">
+                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:700px;" ><![endif]-->
+                  <div class="mj-column-per-100 mj-outlook-group-fix"
+                    style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:top;width:100%">
+                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                      <tbody>
+                        <tr>
+                          <td style="padding:0;vertical-align:top">
+                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                              <tbody>
+                                <tr>
+                                  <td style="font-size:0;padding:0;word-break:break-word">
+                                    <div style="height:48px;line-height:48px">&#8202;</div>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div> <!--[if mso | IE]></td></tr></table><![endif]--> 
       </lp-layout>
-      <lp-layout lp-label="Hero - Inhoudsopgave">
+      <lp-layout lp-label="Hero + Inhoudsopgave">
         <table align="center" background="images/header-light.png" border="0" cellpadding="0" cellspacing="0"
           role="presentation"
           style="background:url(images/header-light.png) top/auto 100% repeat;background-position:top;background-repeat:repeat;background-size:auto 100%;width:100%">
@@ -758,41 +792,40 @@
             </tr>
           </tbody>
         </table>
+        <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+        <div style="margin:0 auto;max-width:700px">
+          <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%">
+            <tbody>
+              <tr>
+                <td style="direction:ltr;font-size:0;padding:0;text-align:center">
+                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:700px;" ><![endif]-->
+                  <div class="mj-column-per-100 mj-outlook-group-fix"
+                    style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:top;width:100%">
+                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                      <tbody>
+                        <tr>
+                          <td style="padding:0;vertical-align:top">
+                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                              <tbody>
+                                <tr>
+                                  <td style="font-size:0;padding:0;word-break:break-word">
+                                    <div style="height:48px;line-height:48px">&#8202;</div>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div> <!--[if mso | IE]></td></tr></table><![endif]--> 
       </lp-layout>
     </lp-repeater>
-
-    <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-    <div style="margin:0 auto;max-width:700px">
-      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%">
-        <tbody>
-          <tr>
-            <td style="direction:ltr;font-size:0;padding:0;text-align:center">
-              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:700px;" ><![endif]-->
-              <div class="mj-column-per-100 mj-outlook-group-fix"
-                style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:top;width:100%">
-                <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                  <tbody>
-                    <tr>
-                      <td style="padding:0;vertical-align:top">
-                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                          <tbody>
-                            <tr>
-                              <td style="font-size:0;padding:0;word-break:break-word">
-                                <div style="height:48px;line-height:48px">&#8202;</div>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div> <!--[if mso | IE]></td></tr></table><![endif]-->
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div> <!--[if mso | IE]></td></tr></table><![endif]--> 
     
     <lp-repeater>      
       <lp-layout lp-label="H1">
@@ -938,7 +971,7 @@
                                       style="color:#1d1a14;font-family:Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Intro tekstblok"> Lorem ipsum dolor sit amet, consectetur
                                         adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                                        aliqua. Ut enim ad minim veniam, <a href="https://www.laposta.nl">quis nostrud exercitation</a> ullamco laboris nisi
                                         ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
                                         voluptate velit esse cillum dolore eu fugiat nulla pariatur.</lp-multiline>
                                     </div>
