--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -1046,8 +1046,8 @@
             style="background:#fff;background-color:#fff;width:100%">
             <tbody>
               <tr>
-                <td style="direction:ltr;font-size:0;padding:16px;text-align:center">
-                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:668px;" ><![endif]-->
+                <td style="direction:ltr;font-size:0;padding:16px 24px;text-align:center">
+                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:652px;" ><![endif]-->
                   <div class="mj-column-per-100 mj-outlook-group-fix"
                     style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:middle;width:100%">
                     <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
@@ -1099,8 +1099,8 @@
             style="background:#fff;background-color:#fff;width:100%">
             <tbody>
               <tr>
-                <td style="direction:ltr;font-size:0;padding:16px;text-align:center">
-                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:668px;" ><![endif]-->
+                <td style="direction:ltr;font-size:0;padding:16px 24px;text-align:center">
+                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:652px;" ><![endif]-->
                   <div class="mj-column-per-100 mj-outlook-group-fix"
                     style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:middle;width:100%">
                     <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
@@ -1152,8 +1152,8 @@
             style="background:#fff;background-color:#fff;width:100%">
             <tbody>
               <tr>
-                <td style="direction:ltr;font-size:0;padding:16px;text-align:center">
-                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:668px;" ><![endif]-->
+                <td style="direction:ltr;font-size:0;padding:16px 24px;text-align:center">
+                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:652px;" ><![endif]-->
                   <div class="mj-column-per-100 mj-outlook-group-fix"
                     style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:middle;width:100%">
                     <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
@@ -1204,8 +1204,8 @@
             style="background:#fff;background-color:#fff;width:100%">
             <tbody>
               <tr>
-                <td style="direction:ltr;font-size:0;padding:16px;text-align:center">
-                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:668px;" ><![endif]-->
+                <td style="direction:ltr;font-size:0;padding:16px 24px;text-align:center">
+                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:652px;" ><![endif]-->
                   <div class="mj-column-per-100 mj-outlook-group-fix"
                     style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:middle;width:100%">
                     <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
