lp-video img border radius

--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -234,6 +234,10 @@
       text-decoration:none;
     }
 
+    .lp-video img {
+      border-radius: 8px;
+    }
+
     @media screen and (max-width:700px) {
       .inline-image {
         display: block !important;
@@ -827,7 +831,8 @@
       </lp-layout>
     </lp-repeater>
     
-    <lp-repeater>      
+    <lp-repeater>
+
       <lp-layout lp-label="H1">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
@@ -2181,7 +2186,7 @@
                                       <tbody>
                                         <tr>
                                           <td style="width:652px" class="mj-full-width-mobile">
-                                              <lp-video lp-width="652" lp-label="Video" lp-src="http://www.youtube.com/watch?v=aLwf6s2xwlU" lp-resizable lp-max-width="652" lp-min-width="200"/>
+                                              <lp-video lp-width="652" lp-label="Video" lp-src="https://www.youtube.com/watch?v=JVQS0wGF0zg" lp-resizable lp-max-width="652" lp-min-width="200"/>
                                           </td>
                                         </tr>
                                       </tbody>
