--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -1439,7 +1439,7 @@
                                       style="color:#1d1a14;font-family:Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Tekstblok"><img class="inline-image"
                                           src="images/I117_1052_115_1035_37_172_37_110.png" width="322" height="110"
-                                          align="right" hspace="10" vspace="10"  lp-max-width="642" lp-min-width="100"> Lorem ipsum dolor
+                                          align="right" hspace="10" vspace="10"  lp-max-width="642" lp-min-width="100" style="margin:0 !important;"> Lorem ipsum dolor
                                         sit amet, consectetur adipiscing elit. Morbi tristique, arcu ut consectetur
                                         ultricies, purus felis vestibulum erat, laoreet pharetra dolor diam sed diam.
                                         Vestibulum volutpat dolor at lorem varius volutpat. Pellentesque lacinia varius
@@ -1498,7 +1498,7 @@
                                       style="color:#1d1a14;font-family:Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                       <lp-multiline lp-label="Tekstblok"><img class="inline-image"
                                           src="images/I117_1136_117_1080_37_116_37_110.png" width="322" height="110"
-                                          align="left" hspace="10" vspace="10" > Lorem ipsum dolor
+                                          align="left" hspace="10" vspace="10" style="margin:0 !important;"> Lorem ipsum dolor
                                         sit amet, consectetur adipiscing elit. Morbi tristique, arcu ut consectetur
                                         ultricies, purus felis vestibulum erat, laoreet pharetra dolor diam sed diam.
                                         Vestibulum volutpat dolor at lorem varius volutpat. Pellentesque lacinia varius
