outlook link update

--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -203,6 +203,32 @@
     a:link {
       color: inherit
     }
+
+    a {
+    	color: #1d1a14 !important;
+    }
+    
+    a[x-apple-data-detectors] {
+			color: #1d1a14 !important;
+			font-size: inherit !important;
+			font-family: inherit !important;
+			font-weight: inherit !important;
+			line-height: inherit !important;
+		}
+		u + #body a {
+			color: #1d1a14 !important;
+			font-size: inherit !important;
+			font-family: inherit !important;
+			font-weight: inherit !important;
+			line-height: inherit !important;
+		}
+		#MessageViewBody a {
+			color: #1d1a14 !important;
+			font-size: inherit !important;
+			font-family: inherit !important;
+			font-weight: inherit !important;
+			line-height: inherit !important;
+		}
     
     .lp-toc-link, .lp-toc-link a {
       color:#1d1a14;
