cta button link color

--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -1256,7 +1256,7 @@
                                       rel="noopener"
                                       target="_blank"
                                       href="http://laposta.nl"
-                                      style="background-color:#e42219;border-radius:25px;color:#ffffff;display:inline-block;font-size: 16px; font-family: Arial, sans-serif;font-weight:bold;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;padding: 16px 24px;"
+                                      style="background-color:#e42219;border-radius:25px;color:#ffffff !important;display:inline-block;font-size: 16px; font-family: Arial, sans-serif;font-weight:bold;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;padding: 16px 24px;"
                                       >
                                       <lp-singleline lp-label="Button tekst">This is a button &rarr;</lp-singleline>
                                       </a>
@@ -1309,7 +1309,7 @@
                                       rel="noopener"
                                       target="_blank"
                                       href="http://laposta.nl"
-                                      style="background-color:#e42219;border-radius:25px;color:#ffffff;display:inline-block;font-size: 16px; font-family: Arial, sans-serif;font-weight:bold;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;padding: 16px 24px;"
+                                      style="background-color:#e42219;border-radius:25px;color:#ffffff !important;display:inline-block;font-size: 16px; font-family: Arial, sans-serif;font-weight:bold;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;padding: 16px 24px;"
                                       >
                                       <lp-singleline lp-label="Button tekst">This is a button &rarr;</lp-singleline>
                                       </a>
@@ -1362,7 +1362,7 @@
                                       rel="noopener"
                                       target="_blank"
                                       href="http://laposta.nl"
-                                      style="background-color:#ffffff;border-radius:25px;border:1px solid #1d1a14;color:#1d1a14;display:inline-block;font-size: 16px; font-family: Arial, sans-serif;font-weight:bold;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;padding: 16px 24px;mso-color-alt: #777777 !important;"
+                                      style="background-color:#ffffff;border-radius:25px;border:1px solid #1d1a14;color:#1d1a14 !important;display:inline-block;font-size: 16px; font-family: Arial, sans-serif;font-weight:bold;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;padding: 16px 24px;mso-color-alt: #777777 !important;"
                                       >
                                       <lp-singleline lp-label="Button tekst">This is a button &rarr;</lp-singleline>
                                       </a>
@@ -1415,7 +1415,7 @@
                                       rel="noopener"
                                       target="_blank"
                                       href="http://laposta.nl"
-                                      style="background-color:#ffffff;border-radius:25px;border:1px solid #1d1a14;color:#1d1a14;display:inline-block;font-size: 16px; font-family: Arial, sans-serif;font-weight:bold;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;padding: 16px 24px;mso-color-alt: #777777 !important;"
+                                      style="background-color:#ffffff;border-radius:25px;border:1px solid #1d1a14;color:#1d1a14 !important;display:inline-block;font-size: 16px; font-family: Arial, sans-serif;font-weight:bold;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;padding: 16px 24px;mso-color-alt: #777777 !important;"
                                       >
                                       <lp-singleline lp-label="Button tekst">This is a button &rarr;</lp-singleline>
                                       </a>
@@ -2203,7 +2203,7 @@
                                       style="
                                         background-color:#e42219;
                                         border-radius:25px;
-                                        color:#ffffff;
+                                        color:#ffffff !important;
                                         display:inline-block;
                                         font-size: 16px; 
                                         font-family: Arial, sans-serif;
