--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -446,7 +446,7 @@
                                                             <td align="left"
                                                               style="font-size:0;padding:0 0 8px;word-break:break-word">
                                                               <div
-                                                                style="color:#e84e0f;font-family:Mulish,Arial;font-size:28px;font-weight:900;line-height:34px;text-align:left;text-decoration:none;text-transform:uppercase">
+                                                                style="color:#FB6B37;font-family:Mulish,Arial;font-size:28px;font-weight:900;line-height:34px;text-align:left;text-decoration:none;text-transform:uppercase">
                                                                 <lp-singleline lp-label="Intro titel"> [introtitel]
                                                                   Lorem ipsum</lp-singleline> </div>
                                                             </td>
@@ -2095,10 +2095,10 @@
             <tbody>
               <tr>
                 <td style="direction:ltr;font-size:0;padding:0;text-align:center">
-                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#e84e0f" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-                  <div style="background:#e84e0f;background-color:#e84e0f;margin:0 auto;max-width:700px">
+                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#D3450D" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+                  <div style="background:#D3450D;background-color:#D3450D;margin:0 auto;max-width:700px">
                     <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
-                      style="background:#e84e0f;background-color:#e84e0f;width:100%">
+                      style="background:#D3450D;background-color:#D3450D;width:100%">
                       <tbody>
                         <tr>
                           <td style="direction:ltr;font-size:0;padding:8px 24px;text-align:center">
@@ -2138,10 +2138,10 @@
                       </tbody>
                     </table>
                   </div>
-                  <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#e84e0f" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-                  <div style="background:#e84e0f;background-color:#e84e0f;margin:0 auto;max-width:700px">
+                  <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#D3450D" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+                  <div style="background:#D3450D;background-color:#D3450D;margin:0 auto;max-width:700px">
                     <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
-                      style="background:#e84e0f;background-color:#e84e0f;width:100%">
+                      style="background:#D3450D;background-color:#D3450D;width:100%">
                       <tbody>
                         <tr>
                           <td style="direction:ltr;font-size:0;padding:0 24px;text-align:center">
@@ -2176,10 +2176,10 @@
                       </tbody>
                     </table>
                   </div>
-                  <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#e84e0f" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-                  <div style="background:#e84e0f;background-color:#e84e0f;margin:0 auto;max-width:700px">
+                  <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#D3450D" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+                  <div style="background:#D3450D;background-color:#D3450D;margin:0 auto;max-width:700px">
                     <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
-                      style="background:#e84e0f;background-color:#e84e0f;width:100%">
+                      style="background:#D3450D;background-color:#D3450D;width:100%">
                       <tbody>
                         <tr>
                           <td style="direction:ltr;font-size:0;padding:24px;text-align:center">
@@ -2653,7 +2653,7 @@
                                                         <td align="left"
                                                           style="font-size:0;padding:0;word-break:break-word">
                                                           <div
-                                                            style="color:#e84e0f;font-family:Mulish,Arial;font-size:20px;font-weight:900;line-height:24px;text-align:left;text-decoration:none">
+                                                            style="color:#FB6B37;font-family:Mulish,Arial;font-size:20px;font-weight:900;line-height:24px;text-align:left;text-decoration:none">
                                                             <lp-singleline> CONTACTGEGEVENS</lp-singleline> </div>
                                                         </td>
                                                       </tr>
@@ -2812,7 +2812,7 @@
                                                             style="color:#fff;font-family:Mulish,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                                             <lp-multiline> Bezoek onze website voor meer informatie <br>
                                                               <a href="https://www.dictator.nl"
-                                                                style="color:#e84e0f;font-weight:700;text-decoration:none">www.dictator.nl</a>
+                                                                style="color:#FB6B37;font-weight:700;text-decoration:none">www.dictator.nl</a>
                                                             </lp-multiline> </div>
                                                         </td>
                                                       </tr>
