--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -406,7 +406,7 @@
     </lp-layout><lp-layout>
       <table align="center" background="images/hero-bg.png" border="0" cellpadding="0" cellspacing="0"
         role="presentation"
-        style="background:url(images/hero-bg.png) top/auto 100% repeat;background-position:top;background-repeat:repeat;background-size:auto 100%;width:100%">
+        style="background:url(images/hero-bg.png) top/auto 100% repeat;background-position:top;background-repeat:repeat;background-size:auto 100%;width:100%;background-color:red;">
         <tbody>
           <tr>
             <td>
