--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -420,7 +420,7 @@
                         <td style="direction:ltr;font-size:0;padding:0;text-align:center">
                           <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" width="700px" ><![endif]-->
                           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
-                            style="background:#234793;background-color:#234793;width:100%">
+                            style="background:transparent;background-color:transparent;width:100%">
                             <tbody>
                               <tr>
                                 <td>
