--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -424,7 +424,7 @@
                             <tbody>
                               <tr>
                                 <td>
-                                  <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#234793" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+                                  <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="green" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
                                   <div style="margin:0 auto;max-width:700px">
                                     <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
                                       style="width:100%">
