--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -406,13 +406,13 @@
       </table>
     </lp-layout>
     <lp-layout>
-      <table align="center" background="images/hero-bg.png" border="0" cellpadding="0" cellspacing="0"
+      <table align="center" background="images/hero-bg_light.png" border="0" cellpadding="0" cellspacing="0"
         role="presentation"
-        style="background:url(images/hero-bg.png) top/auto 100% repeat;background-position:top;background-repeat:repeat;background-size:auto 100%;width:100%;background-color:#234793;">
+        style="background:url(images/hero-bg_light.png) top/auto 100% repeat;background-position:top;background-repeat:repeat;background-size:auto 100%;width:100%;background-color:#234793;">
         <tbody>
           <tr>
             <td>
-              <!--[if mso | IE]><v:rect style="mso-width-percent:1000;" xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false"><v:fill origin="0.5, 0" position="0.5, 0" src="images/hero-bg.png" type="tile" size="auto,100%" /><v:textbox style="mso-fit-shape-to-text:true" inset="0,0,0,0"><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+              <!--[if mso | IE]><v:rect style="mso-width-percent:1000;" xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false"><v:fill origin="0.5, 0" position="0.5, 0" src="images/hero-bg_light.png" type="tile" size="auto,100%" /><v:textbox style="mso-fit-shape-to-text:true" inset="0,0,0,0"><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
               <div style="margin:0 auto;max-width:700px">
                 <div style="font-size:0;line-height:0">
                   <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
